<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_from_app_bar"
    android:layout_marginBottom="@dimen/margin_from_app_bar"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:paddingLeft="@dimen/spacing_normal"
        android:paddingRight="@dimen/spacing_normal"
        android:paddingTop="@dimen/spacing_moderate"
        android:paddingBottom="@dimen/spacing_moderate">

        <include layout="@layout/account_header"></include>

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_slightly_small"
            android:drawableStart="@drawable/ic_edit"
            android:layout_alignParentEnd="true"
            android:text="Edit"
            android:paddingTop="-2dp"
            android:drawablePadding="2dp"
            android:background="@null"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_tiny"
        android:layout_marginBottom="@dimen/margin_tiny"
        android:background="@color/white"
        android:outlineAmbientShadowColor="@color/grey">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_moderate"
            android:paddingStart="@dimen/spacing_semi_large"
            android:paddingEnd="@dimen/spacing_semi_large"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/user_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:text="DD/MM/YY"
                android:gravity="center"
                android:fontFamily="@font/noto_sans_semi_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal_extra"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_item_dob"
                android:fontFamily="@font/noto_sans"
                android:textColor="@color/grey"
                android:textSize="@dimen/text_size_small"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_moderate"
            android:paddingStart="@dimen/spacing_semi_large"
            android:paddingEnd="@dimen/spacing_semi_large"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/user_native"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:text="native"
                android:gravity="center"
                android:fontFamily="@font/noto_sans_semi_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal_extra"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_item_native"
                android:fontFamily="@font/noto_sans"
                android:textColor="@color/grey"
                android:textSize="@dimen/text_size_small"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_moderate"
            android:paddingStart="@dimen/spacing_semi_large"
            android:paddingEnd="@dimen/spacing_semi_large"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/user_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:text="city"
                android:gravity="center"
                android:fontFamily="@font/noto_sans_semi_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal_extra"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_item_city"
                android:fontFamily="@font/noto_sans"
                android:textColor="@color/grey"
                android:textSize="@dimen/text_size_small"
                />
        </LinearLayout>


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>